Made responsive edits for all pages
Applied responsive behaviour to all pages

--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
 </head>
 <body>
 
-   <!-- Navbar -->
-   <nav class="navbar navbar-expand-lg">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg mb-0">
     <a class="navbar-brand" href="#">
-        <img class="d-inline" src="https://i.pinimg.com/736x/26/5b/11/265b1184cdfc341d454d2e9d1e94795f.jpg" width="70" height="70" class="d-inline-block align-top" alt="">
-      </a>
+       Saketh Vangala
+    </a>
     <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" style="color: black;"></span>
     </button>
@@ -43,6 +43,7 @@
       </ul>
     </div>
   </nav>
+  
 
       <!-- My Picture -->
     <div class="container  my-5 text-center">
@@ -50,7 +51,7 @@
   </div>
 
   <!-- My Intro -->
-  <div class="container w-50 ">
+  <div class="container mw-75 ">
       <p>I am a developer and programmer, born and raised in Karimnagar, pursuing my 3rd year of graduation from <a href="http://www.vnrvjiet.ac.in/">VNRVJIET</a>,Hyderabad in the stream of <strong>Information Technology</strong>. I'm up for challenges which pushes me into exploration to learn new things.Recently, I won 1st prize in <strong>MY BIG IDEA COMPETITION</strong> for presenting a societal impact project.</p>
       <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites. </p>
   </div>
@@ -59,8 +60,8 @@
       <!-- Skills -->
   <div class="container">
   <h2 class="mt-5 mb-4 text-center " style="color:#0075f6">LOOK WHAT I CAN DO</h2>
-  <h4><img src="https://img.icons8.com/dotty/40/000000/web.png" class="m-3"/>Development</h4>
-        <div class="row skills d-flex flex-wrap justify-content-around align-items-center">
+  <h4 class="font-weight-bold text-center text-info"><img src="https://img.icons8.com/dotty/40/000000/web.png" class="m-3 "/>Development</h4>
+        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           <div>
             <i class="fab fa-html5 fa-5x"></i>
             <p>HTML5</p>
@@ -82,8 +83,8 @@
             <p>Node.js</p>
           </div>
         </div>
-        <h4><i class="m-3  fas fa-code"></i> Programming</h4>
-        <div class="row skills d-flex flex-wrap justify-content-around align-items-center">
+        <h4 class="font-weight-bold text-center text-info"><i class="m-3  fas fa-code"></i> Programming</h4>
+        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           
             <div>
               <i class="fab fa-cuttlefish fa-5x"></i>
@@ -100,8 +101,8 @@
         </div>  
         <div class="row">
           <div class="col-lg-6 border-right border-dark">
-            <h4><i class="m-3 fas fa-pen-fancy"></i> Designing</h4>
-        <div class="row skills d-flex flex-wrap justify-content-around align-items-center">
+            <h4 class="font-weight-bold text-center text-info"><i class="m-3 fas fa-pen-fancy"></i> Designing</h4>
+        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           <div>
             <img src="https://img.icons8.com/fluent/96/000000/adobe-photoshop.png"/>
             <p>Adobe Photoshop</p>
@@ -113,8 +114,8 @@
       </div>
           </div>
           <div class="col-lg-6">
-            <h4><i class="m-3 fas fa-chalkboard-teacher"></i>Currently Learning...</h4>
-            <div class="row skills d-flex flex-wrap justify-content-around align-items-center">
+            <h4 class="font-weight-bold text-center text-info"><i class="m-3 fas fa-chalkboard-teacher"></i>Currently Learning...</h4>
+            <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
               <div>
                 <i class="fab fa-angular fa-5x "></i>
                 <p>Angular</p>
@@ -168,18 +169,22 @@
 
 
     <!-- Footer -->
-    <footer class="jumbotron m-0 p-4" id="footer">
-      <h3 class="text-center" style="color: black;"><i class="fas fa-comments"></i>Get In Touch</h3>
-      <div class="container-fluid d-flex justify-content-center align-items-center">
-        <a class="social-media" href="https://www.linkedin.com/in/saketh-vangala-8084b91a4?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FxCG3F%2BXTN2C%2FG435f%2FRxw%3D%3D" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
-        <a class="social-media" href="https://github.com/SakethVangala11" target="_blank"><i class="fab fa-github-square"></i></a>
-        <a class="social-media" href="mailto:sakethvangala36323@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a class="social-media" href="https://www.instagram.com/saketh_vangala/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a class="social-media" href="https://www.facebook.com/vangala.saketh.7" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      </div>
-      <p class="text-center">© 2020, Made by Saketh Vangala </p>
-    </footer>
+ <footer class="jumbotron m-0 p-4" id="footer">
+  <h3 class="text-center" style="color: black;"><i class="fas fa-comments mr-3"></i>Get In Touch</h3>
+  <div class="container-fluid d-flex justify-content-center align-items-center">
+    <a class="social-media mr-4" href="https://www.linkedin.com/in/saketh-vangala-8084b91a4?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FxCG3F%2BXTN2C%2FG435f%2FRxw%3D%3D" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
+    <a class="social-media mr-4" href="https://github.com/SakethVangala11" target="_blank"><i class="fab fa-github-square"></i></a>
+    <a class="social-media mr-4" href="mailto:sakethvangala36323@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+    <a class="social-media mr-4" href="https://www.instagram.com/saketh_vangala/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a class="social-media mr-4" href="https://www.facebook.com/vangala.saketh.7" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  </div>
+  <p class="text-center">© 2020 Saketh Vangala </p>
+</footer>
 
+<!-- Bootstrap Script -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     
 </body>
 </html>
