--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Saketh Vangala</title>
      <!-- Bootstrap -->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
      <!-- Font Awesome -->
@@ -19,10 +19,10 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg mb-0">
     <a class="navbar-brand" href="#">
-        <img class="d-inline" src="https://i.pinimg.com/736x/26/5b/11/265b1184cdfc341d454d2e9d1e94795f.jpg" width="70" height="70" class="d-inline-block align-top" alt="">
-      </a>
+       Saketh Vangala
+    </a>
     <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon" style="color: black;"></span>
     </button>
@@ -46,12 +46,12 @@
   
       <!-- Introduction -->
       <div class="container" id="about">
-        <div class="row mt-3">
-          <div class="col-sm-6 p-2 flex-column d-flex justify-content-center align-items-flex-start" style="height: 400px;">
+        <div class="row">
+          <div class="col-lg-6 mb-2 flex-column d-flex justify-content-center align-items-flex-start" style="height: 400px;">
             <h5><span style="color:#0075f6;font-weight:700"> HELLO </span><h1><span style="color:#0075f6 ;"><span style="color: black;"> I'm </span><span style="color:#0075f6 ;">Saketh Vangala</span> </span></h1></h5>
             <h5>A Web developer from Hyderabad pursuing my Bachelors from VNRVJIET in the stream of <strong>Information Technology</strong></h5>
           </div>
-          <div class="col-sm-6  p-2">
+          <div class="col-lg-6 mb-2">
             <img src="https://webdakaar.com/img/design-&-development.png" width="100%" alt="">
           </div>
         </div>
@@ -60,18 +60,18 @@
  
  
 
-      <!-- Footer -->
-      <footer class="jumbotron m-0 p-4" id="footer">
-        <h3 class="text-center" style="color: black;"><i class="fas fa-comments"></i>Get In Touch</h3>
-        <div class="container-fluid d-flex justify-content-center align-items-center">
-          <a class="social-media" href="https://www.linkedin.com/in/saketh-vangala-8084b91a4?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FxCG3F%2BXTN2C%2FG435f%2FRxw%3D%3D" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
-          <a class="social-media" href="https://github.com/SakethVangala11" target="_blank"><i class="fab fa-github-square"></i></a>
-          <a class="social-media" href="mailto:sakethvangala36323@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-          <a class="social-media" href="https://www.instagram.com/saketh_vangala/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a class="social-media" href="https://www.facebook.com/vangala.saketh.7" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        </div>
-        <p class="text-center">© 2020, Made by Saketh Vangala </p>
-      </footer>
+     <!-- Footer -->
+ <footer class="jumbotron m-0 p-4" id="footer">
+  <h3 class="text-center" style="color: black;"><i class="fas fa-comments mr-3"></i>Get In Touch</h3>
+  <div class="container-fluid d-flex justify-content-center align-items-center">
+    <a class="social-media mr-4" href="https://www.linkedin.com/in/saketh-vangala-8084b91a4?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FxCG3F%2BXTN2C%2FG435f%2FRxw%3D%3D" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
+    <a class="social-media mr-4" href="https://github.com/SakethVangala11" target="_blank"><i class="fab fa-github-square"></i></a>
+    <a class="social-media mr-4" href="mailto:sakethvangala36323@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+    <a class="social-media mr-4" href="https://www.instagram.com/saketh_vangala/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a class="social-media mr-4" href="https://www.facebook.com/vangala.saketh.7" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  </div>
+  <p class="text-center">© 2020 Saketh Vangala </p>
+</footer>
 
 
 
