Skills Grid Updated
Skills grid systeam and phone icon updated

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="works.html"><i class="fas fa-laptop-code"></i> My Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#footer"><i class="fas fa-phone-square"></i> Contact</a>
+          <a class="nav-link" href="#footer"><i class="fas fa-phone-square-alt"></i> Contact</a>
         </li>
       </ul>
     </div>
@@ -61,28 +61,36 @@
   <div class="container">
   <h2 class="mt-5 mb-4 text-center " style="color:#0075f6">LOOK WHAT I CAN DO</h2>
   <h4 class="font-weight-bold text-center text-info"><img src="https://img.icons8.com/dotty/40/000000/web.png" class="m-3 "/>Development</h4>
-        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
-          <div>
-            <i class="fab fa-html5 fa-5x"></i>
-            <p>HTML5</p>
-          </div>
-          <div>
-            <i class="fab fa-css3-alt fa-5x"></i>
-            <p>CSS3</p>
-          </div>
-          <div>
-            <i class="fab fa-js fa-5x"></i>
-            <p>Javascript</p>
-          </div>
-          <div>
-            <i class="fab fa-bootstrap fa-5x"></i>
-            <p>Bootstrap</p>
-          </div>
-          <div>
-            <i class="fab fa-node fa-5x"></i>
-            <p>Node.js</p>
-          </div>
-        </div>
+  <div class="row">
+    <div class="col-lg-6">
+       <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
+           <div>
+               <i class="fab fa-html5 fa-5x"></i>
+               <p>HTML5</p>
+             </div>
+             <div>
+               <i class="fab fa-css3-alt fa-5x"></i>
+               <p>CSS3</p>
+             </div>
+             <div>
+               <i class="fab fa-js fa-5x"></i>
+               <p>Javascript</p>
+             </div>
+       </div>
+    </div>
+    <div class="col-lg-6">
+       <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
+           <div>
+               <i class="fab fa-bootstrap fa-5x"></i>
+               <p>Bootstrap</p>
+             </div>
+             <div>
+               <i class="fab fa-node fa-5x"></i>
+               <p>Node.js</p>
+             </div>
+       </div>
+    </div>
+</div>  
         <h4 class="font-weight-bold text-center text-info"><i class="m-3  fas fa-code"></i> Programming</h4>
         <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           
