--- a/works.html
+++ b/works.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="works.html"><i class="fas fa-laptop-code"></i> My Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#footer"><i class="fas fa-phone-square"></i> Contact</a>
+          <a class="nav-link" href="#footer"><i class="fas fa-phone-square-alt"></i></i> Contact</a>
         </li>
       </ul>
     </div>
