Updated Text alignment of skills

--- a/about.html
+++ b/about.html
@@ -66,15 +66,15 @@
        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
            <div>
                <i class="fab fa-html5 fa-5x"></i>
-               <p>HTML5</p>
+               <p class="text-center">HTML5</p>
              </div>
              <div>
                <i class="fab fa-css3-alt fa-5x"></i>
-               <p>CSS3</p>
+               <p class="text-center">CSS3</p>
              </div>
              <div>
                <i class="fab fa-js fa-5x"></i>
-               <p>Javascript</p>
+               <p class="text-center">Javascript</p>
              </div>
        </div>
     </div>
@@ -82,11 +82,11 @@
        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
            <div>
                <i class="fab fa-bootstrap fa-5x"></i>
-               <p>Bootstrap</p>
+               <p class="text-center">Bootstrap</p>
              </div>
              <div>
                <i class="fab fa-node fa-5x"></i>
-               <p>Node.js</p>
+               <p class="text-center">Node.js</p>
              </div>
        </div>
     </div>
@@ -96,15 +96,15 @@
           
             <div>
               <i class="fab fa-cuttlefish fa-5x"></i>
-              <p>C</p>
+              <p class="text-center">C</p>
             </div>
             <div>
               <i class="fab fa-cuttlefish fa-5x"></i><span style="font-size: 1.5em;">++</span>
-              <p>C++</p>
+              <p class="text-center">C++</p>
             </div>
             <div>
               <i class="fab fa-python fa-5x"></i>
-              <p>Python</p>
+              <p class="text-center">Python</p>
             </div>
         </div>  
         <div class="row">
@@ -113,11 +113,11 @@
         <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           <div>
             <img src="https://img.icons8.com/fluent/96/000000/adobe-photoshop.png"/>
-            <p>Adobe Photoshop</p>
+            <p class="text-center">Adobe Photoshop</p>
           </div>
           <div>
             <img src="https://img.icons8.com/plasticine/96/000000/canva.png"/>
-            <p>Canva</p>
+            <p class="text-center">Canva</p>
           </div>
       </div>
           </div>
@@ -126,11 +126,11 @@
             <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
               <div>
                 <i class="fab fa-angular fa-5x "></i>
-                <p>Angular</p>
+                <p class="text-center">Angular</p>
               </div>
               <div>
                 <img src="https://img.icons8.com/ios-filled/96/000000/learning.png"/>
-                <p>Machine Learning</p>
+                <p class="text-center">Machine Learning</p>
               </div>
           </div>
           </div>
