fixed navbar updated
Updated fixed navbar for every page

--- a/about.html
+++ b/about.html
@@ -18,35 +18,35 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg mb-0">
-    <a class="navbar-brand" href="#">
-       Saketh Vangala
-    </a>
-    <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon" style="color: black;"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto pr-3">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html"><i class="fas fa-user"></i> About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="works.html"><i class="fas fa-laptop-code"></i> My Works</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#footer"><i class="fas fa-phone-square-alt"></i> Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg mb-0 fixed-top bg-light">
+  <a class="navbar-brand" href="#">
+     Saketh Vangala
+  </a>
+  <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon" style="color: black;"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto pr-3">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html"><i class="fas fa-user"></i> About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="works.html"><i class="fas fa-laptop-code"></i> My Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#footer"><i class="fas fa-phone-square-alt"></i> Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   
 
       <!-- My Picture -->
-    <div class="container  my-5 text-center">
+    <div class="container  my-5 text-center pt-5">
       <img src="https://media-exp1.licdn.com/dms/image/C5603AQG9bed3Tf-uSQ/profile-displayphoto-shrink_200_200/0?e=1604534400&v=beta&t=07dA35gLJEMARPMDtDEeeUJG5_Y-iSWP4wNriHtHeKI" style="border-radius: 20px; box-shadow:0px 2px 8px grey" alt="My Photo">
   </div>
 
