--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
   </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg mb-0">
-    <a class="navbar-brand" href="#">
-       Saketh Vangala
-    </a>
-    <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon" style="color: black;"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto pr-3">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html"><i class="fas fa-user"></i> About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="works.html"><i class="fas fa-laptop-code"></i> My Works</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#footer"><i class="fas fa-phone-square-alt"></i> Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg mb-0 fixed-top bg-light">
+  <a class="navbar-brand" href="#">
+     Saketh Vangala
+  </a>
+  <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon" style="color: black;"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto pr-3">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html"><i class="fas fa-user"></i> About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="works.html"><i class="fas fa-laptop-code"></i> My Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#footer"><i class="fas fa-phone-square-alt"></i> Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   
       <!-- Introduction -->
-      <div class="container" id="about">
+      <div class="container pt-5" id="about">
         <div class="row">
           <div class="col-lg-6 mb-2 flex-column d-flex justify-content-center align-items-flex-start" style="height: 400px;">
             <h5><span style="color:#0075f6;font-weight:700"> HELLO </span><h1><span style="color:#0075f6 ;"><span style="color: black;"> I'm </span><span style="color:#0075f6 ;">Saketh Vangala</span> </span></h1></h5>
