--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </nav>
   
       <!-- Introduction -->
-      <div class="container pt-5" id="about">
+      <div class="container pt-5 mt-lg-5" id="about">
         <div class="row">
           <div class="col-lg-6 mb-2 flex-column d-flex justify-content-center align-items-flex-start" style="height: 400px;">
             <h5><span style="color:#0075f6;font-weight:700"> HELLO </span><h1><span style="color:#0075f6 ;"><span style="color: black;"> I'm </span><span style="color:#0075f6 ;">Saketh Vangala</span> </span></h1></h5>
