--- a/about.html
+++ b/about.html
@@ -65,15 +65,18 @@
     <div class="col-lg-6">
        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
            <div>
-               <i class="fab fa-html5 fa-5x"></i>
+               <!-- <i class="fab fa-html5 fa-5x"></i> -->
+               <img src="https://img.icons8.com/color/96/000000/html-5.png"/>
                <p class="text-center">HTML5</p>
              </div>
              <div>
-               <i class="fab fa-css3-alt fa-5x"></i>
+               <!-- <i class="fab fa-css3-alt fa-5x"></i> -->
+               <img src="https://img.icons8.com/color/96/000000/css3.png"/>
                <p class="text-center">CSS3</p>
              </div>
              <div>
-               <i class="fab fa-js fa-5x"></i>
+               <!-- <i class="fab fa-js fa-5x"></i> -->
+               <img src="https://img.icons8.com/color/96/000000/javascript.png"/>
                <p class="text-center">Javascript</p>
              </div>
        </div>
@@ -81,11 +84,13 @@
     <div class="col-lg-6">
        <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
            <div>
-               <i class="fab fa-bootstrap fa-5x"></i>
+               <!-- <i class="fab fa-bootstrap fa-5x"></i> -->
+               <img src="https://img.icons8.com/color/96/000000/bootstrap.png"/>
                <p class="text-center">Bootstrap</p>
              </div>
              <div>
-               <i class="fab fa-node fa-5x"></i>
+               <!-- <i class="fab fa-node fa-5x"></i> -->
+               <img src="https://img.icons8.com/color/96/000000/nodejs.png"/>
                <p class="text-center">Node.js</p>
              </div>
        </div>
@@ -95,15 +100,18 @@
         <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
           
             <div>
-              <i class="fab fa-cuttlefish fa-5x"></i>
+              <!-- <i class="fab fa-cuttlefish fa-5x"></i> -->
+              <img src="https://img.icons8.com/color/96/000000/c-programming.png"/>
               <p class="text-center">C</p>
             </div>
             <div>
-              <i class="fab fa-cuttlefish fa-5x"></i><span style="font-size: 1.5em;">++</span>
+              <!-- <i class="fab fa-cuttlefish fa-5x"></i><span style="font-size: 1.5em;">++</span> -->
+              <img src="https://img.icons8.com/color/96/000000/c-plus-plus-logo.png"/>
               <p class="text-center">C++</p>
             </div>
             <div>
-              <i class="fab fa-python fa-5x"></i>
+              <!-- <i class="fab fa-python fa-5x"></i> -->
+              <img src="https://img.icons8.com/color/96/000000/python.png"/>
               <p class="text-center">Python</p>
             </div>
         </div>  
@@ -125,11 +133,13 @@
             <h4 class="font-weight-bold text-center text-info"><i class="m-3 fas fa-chalkboard-teacher"></i>Currently Learning...</h4>
             <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
               <div>
-                <i class="fab fa-angular fa-5x "></i>
+                <!-- <i class="fab fa-angular fa-5x "></i> -->
+                <img src="https://img.icons8.com/color/96/000000/angularjs.png"/>
                 <p class="text-center">Angular</p>
               </div>
               <div>
-                <img src="https://img.icons8.com/ios-filled/96/000000/learning.png"/>
+                <!-- <img src="https://img.icons8.com/ios-filled/96/000000/learning.png"/> -->
+                <img src="https://img.icons8.com/doodle/96/000000/learning.png"/>
                 <p class="text-center">Machine Learning</p>
               </div>
           </div>
