--- a/works.html
+++ b/works.html
@@ -133,7 +133,7 @@
           <div class="col-lg-4"></div>
             <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
                 <div class="card-header w-50 mx-auto border-0 p-0 my-3">
-              <img class="card-img-top " src="https://cdn.stumagz.com/images/56aa4bec3d0bdprofilepic" alt="Photograph">
+              <img class="card-img-top " src="https://scontent.fhyd4-1.fna.fbcdn.net/v/t1.0-9/10290194_1614723832089787_8501825771022107174_n.jpg?_nc_cat=108&ccb=2&_nc_sid=09cbfe&_nc_ohc=tORU4c0jynIAX-NLNox&_nc_ht=scontent.fhyd4-1.fna&oh=331359b5abaf9b8afaf5dec7b8020882&oe=602E2B62" alt="Photograph">
             </div>
               <div class="card-body py-0 mb-3">
                 <h5 class="card-title font-weight-bold text-center">Social Media Manager-VNRVJIET</h5>
