--- a/works.html
+++ b/works.html
@@ -53,7 +53,7 @@
      <div class="col-lg-1"></div>
      <!-- COVID-19 Testing centers -->
      <div class="card col-lg-4  mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
-       <img class="card-img-top pt-2" src="https://postimg.cc/w16N7LCc" alt="Photograph"  height="250px">
+       <img class="card-img-top pt-2" src="Covid Centers.JPG" alt="Photograph"  height="250px">
        <div class="card-body">
          <h5 class="card-title font-weight-bold text-center">COVID-19 Testing Centers</h5>
          <p class="card-text">A responsive website providing information regarding COVID-19 Testing centers of Telangana integrated with Google maps for the ease of Navigation.</p>
@@ -66,7 +66,7 @@
      <div class="col-lg-2 "></div>
      <!-- Future predictions of COVID-19 Cases -->
      <div class="card col-lg-4 mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
-         <img class="card-img-top pt-2" src="https://postimg.cc/mcn1Xqt8" alt="Photograph"  height="250px">
+         <img class="card-img-top pt-2" src="Future predictions covid 19.JPG" alt="Photograph"  height="250px">
          <div class="card-body">
            <h5 class="card-title font-weight-bold text-center">Future Predictions of COVID-19 cases</h5>
            <p class="card-text">A website integrated with Machine Learning which predicts the no.of COVID-19 Cases in India and it's states.</p>
@@ -85,7 +85,7 @@
 
        </div>
          <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
-             <img class="card-img-top pt-2" src="https://postimg.cc/0zfpfcYB" alt="Photograph"  height="250px">
+             <img class="card-img-top pt-2" src="portfolio.JPG" alt="Photograph"  height="250px">
              <div class="card-body">
                <h5 class="card-title font-weight-bold text-center">Portfolio</h5>
                <p class="card-text">My personal Portfolio website to showcase Who am I and What I does.</p>
