--- a/about.html
+++ b/about.html
@@ -47,13 +47,13 @@
 
       <!-- My Picture -->
     <div class="container  my-5 text-center pt-5">
-      <img src="https://media-exp1.licdn.com/dms/image/C5603AQG9bed3Tf-uSQ/profile-displayphoto-shrink_200_200/0?e=1611792000&v=beta&t=RdNcdvja1R7YqFWv5lr8Th8xlda0CVBQ4TLSrVImrHk" style="border-radius: 20px; box-shadow:0px 2px 8px grey" alt="My Photo">
+      <img src="Profile_Pic.jpeg" style="border-radius: 20px; box-shadow:0px 2px 8px grey" alt="My Photo">
   </div>
 
   <!-- My Intro -->
   <div class="container mw-75 ">
       <p>I am a developer and programmer, born and raised in Karimnagar, pursuing my 3rd year of graduation from <a href="http://www.vnrvjiet.ac.in/">VNRVJIET</a>,Hyderabad in the stream of <strong>Information Technology</strong>. I'm up for challenges which pushes me into exploration to learn new things.Recently, I won 1st prize in <strong>MY BIG IDEA COMPETITION</strong> for presenting a societal impact project.</p>
-      <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites. </p>
+      <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites and a website <strong><a href="http://www.covidcenters.in/">COVID 19 Testing Centers</a></strong> is released through <strong><a href="https://telanganatoday.com/vnrvjiet-students-develop-covid-information-website">Press Conference</a></strong> in various newspapers of Telangana.  </p>
   </div>
 
 
