Profile skills updated

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
   <!-- My Intro -->
   <div class="container mw-75 ">
       <p>I am a developer and programmer, born and raised in Karimnagar, pursuing my 3rd year of graduation from <a href="http://www.vnrvjiet.ac.in/">VNRVJIET</a>,Hyderabad in the stream of <strong>Information Technology</strong>. I'm up for challenges which pushes me into exploration to learn new things.Recently, I won 1st prize in <strong>MY BIG IDEA COMPETITION</strong> for presenting a societal impact project.</p>
-      <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites and a website <strong><a href="http://www.covidcenters.in/">COVID 19 Testing Centers</a></strong> is released through <strong><a href="https://telanganatoday.com/vnrvjiet-students-develop-covid-information-website">Press Conference</a></strong> in various newspapers of Telangana.  </p>
+      <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites and a website <strong><a href="http://www.covidcenters.in/" target="_blank">COVID 19 Testing Centers</a></strong> is released through <strong><a href="https://telanganatoday.com/vnrvjiet-students-develop-covid-information-website">Press Conference</a></strong> in various newspapers of Telangana.  </p>
   </div>
 
 
@@ -98,12 +98,6 @@
 </div>
         <h4 class="font-weight-bold text-center text-info"><i class="m-3  fas fa-code"></i> Programming</h4>
         <div class="row skills d-flex flex-wrap justify-content-around align-items-center mb-3">
-
-            <div>
-              <!-- <i class="fab fa-cuttlefish fa-5x"></i> -->
-              <img src="https://img.icons8.com/color/96/000000/c-programming.png"/>
-              <p class="text-center">C</p>
-            </div>
             <div>
               <!-- <i class="fab fa-cuttlefish fa-5x"></i><span style="font-size: 1.5em;">++</span> -->
               <img src="https://img.icons8.com/color/96/000000/c-plus-plus-logo.png"/>
@@ -113,6 +107,11 @@
               <!-- <i class="fab fa-python fa-5x"></i> -->
               <img src="https://img.icons8.com/color/96/000000/python.png"/>
               <p class="text-center">Python</p>
+            </div>
+            <div>
+              <!-- <i class="fab fa-cuttlefish fa-5x"></i> -->
+              <img src="https://img.icons8.com/color/96/000000/c-programming.png"/>
+              <p class="text-center">C</p>
             </div>
         </div>
         <div class="row">
