--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg mb-0 fixed-top bg-light">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="">
      Saketh Vangala
   </a>
   <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
