--- a/works.html
+++ b/works.html
@@ -72,7 +72,7 @@
            <p class="card-text">A website integrated with Machine Learning which predicts the no.of COVID-19 Cases in India and it's states.</p>
            <p><span style="font-weight: 600;">Tech Stack </span>: HTML, CSS, Bootstrap, Node.js, Express.js, Machine Learning.</p>
            <div class="card-footer text-center border-0 bg-white">
-           <a href="https://kovid19predictor.herokuapp.com/" class="btn btn-lg btn-outline-dark px-5" target="_blank">View Live</a>
+           <a href="https://covid19futurepredictor.herokuapp.com/" class="btn btn-lg btn-outline-dark px-5" target="_blank">View Live</a>
        </div>
        </div>
        </div>
