--- a/works.html
+++ b/works.html
@@ -59,7 +59,7 @@
          <p class="card-text">A responsive website providing information regarding COVID-19 Testing centers of Telangana integrated with Google maps for the ease of Navigation.</p>
          <p><span style="font-weight: 600;">Tech Stack </span>: HTML, CSS, Bootstrap,Flask.</p>
          <div class="card-footer text-center border-0 bg-white">
-         <a href="http://www.covidcenters.in/" class="btn btn-lg btn-outline-dark px-5" target="_blank">View Live</a>
+         <a href="https://covidcentres.herokuapp.com/" class="btn btn-lg btn-outline-dark px-5" target="_blank">View Live</a>
      </div>
      </div>
      </div>
