--- a/works.html
+++ b/works.html
@@ -106,6 +106,17 @@
      <h2 class="mt-5 text-center " style="color:#0075f6">Internships & Experiences</h2>
      <div class="row my-5">
         <div class="col-lg-1"></div>
+         <!-- Deloitte Intern-->
+        <div class="card col-lg-4 mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
+            <div class="card-header w-25 mx-auto border-0 p-0 my-3">
+          <img class="card-img-top " src="https://www2.deloitte.com/content/dam/Deloitte/in/Images/promo_images/in-deloitte-logo-1x1-noexp.png" alt="Photograph">
+        </div>
+          <div class="card-body py-0 mb-3">
+            <h5 class="card-title font-weight-bold text-center">Technology Intern - Deloitte</h5>
+            <p class="card-text">Worked on Identity and Access Management</p>
+          </div>
+        </div>
+         <div class="col-lg-2"></div>
         <!-- NSS Volunteer -->
         <div class="card col-lg-4 mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
             <div class="card-header w-25 mx-auto border-0 p-0 my-3">
@@ -116,8 +127,21 @@
             <p class="card-text">A part of Team NSS VNRVJIET - Social Service through Personality Development.</p>
           </div>
         </div>
-        <div class="col-lg-2"></div>
-        <!-- Entreesphere Intern-->
+        <div class="col-lg-1"></div>
+      </div>
+      <div class="row  my-5">
+          <div class="col-lg-1"></div>
+            <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
+                <div class="card-header w-25 mx-auto border-0 p-0 my-3">
+              <img class="card-img-top " src="https://automation.vnrvjiet.ac.in/EduPrime2/Content/Img/logo.png" alt="Photograph">
+            </div>
+              <div class="card-body py-0 mb-3">
+                <h5 class="card-title font-weight-bold text-center">Social Media Manager-VNRVJIET</h5>
+                <p class="card-text">I handle the official Social Media platforms of the institution.</p>
+              </div>
+            </div>
+           <div class="col-lg-2"></div>
+          <!-- Entreesphere Intern-->
         <div class="card col-lg-4 mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
             <div class="card-header w-25 mx-auto border-0 p-0 my-3">
           <img class="card-img-top " src="https://media-exp1.licdn.com/dms/image/C560BAQFJ3v1BcetPvw/company-logo_200_200/0?e=2159024400&v=beta&t=7Gx5r4g7IH5dI4zJ0_qO3MF2qdp6PdCTdqcT8DVz1k4" alt="Photograph">
@@ -128,19 +152,8 @@
           </div>
         </div>
         <div class="col-lg-1"></div>
-      </div>
-      <div class="row  my-5">
-          <div class="col-lg-4"></div>
-            <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
-                <div class="card-header w-25 mx-auto border-0 p-0 my-3">
-              <img class="card-img-top " src="https://automation.vnrvjiet.ac.in/EduPrime2/Content/Img/logo.png" alt="Photograph">
-            </div>
-              <div class="card-body py-0 mb-3">
-                <h5 class="card-title font-weight-bold text-center">Social Media Manager-VNRVJIET</h5>
-                <p class="card-text">I handle the official Social Media platforms of the institution.</p>
-              </div>
-            </div>
-          <div class="col-lg-4"></div>
+          
+          
       </div>
 </div>
 
