--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
   <!-- My Intro -->
   <div class="container mw-75 ">
-      <p>I am a developer and programmer, born and raised in Karimnagar, pursuing my 3rd year of graduation from <a href="http://www.vnrvjiet.ac.in/">VNRVJIET</a>,Hyderabad in the stream of <strong>Information Technology</strong>. I'm up for challenges which pushes me into exploration to learn new things.Recently, I won 1st prize in <strong>MY BIG IDEA COMPETITION</strong> for presenting a societal impact project.</p>
+      <p>I am a developer and programmer, born and raised in Karimnagar, pursuing my final year of graduation from <a href="http://www.vnrvjiet.ac.in/">VNRVJIET</a>,Hyderabad in the stream of <strong>Information Technology</strong>. I'm up for challenges which pushes me into exploration to learn new things.Recently, I won 1st prize in <strong>MY BIG IDEA COMPETITION</strong> for presenting a societal impact project.</p>
       <p>I believe in practical learning which strives me to relate my skills with real-time situations which enables me to gain hands-on experience. My most recent projects were related to <strong>COVID-19</strong> where I worked on bulding websites and a website <strong><a href="http://www.covidcenters.in/" target="_blank">COVID 19 Testing Centers</a></strong> is released through <strong><a href="https://telanganatoday.com/vnrvjiet-students-develop-covid-information-website" target="_blank">Press Conference</a></strong> in various newspapers of Telangana.  </p>
   </div>
 
