Updated skills and educationa and projects

--- a/works.html
+++ b/works.html
@@ -81,23 +81,30 @@
    </div>
    <!-- Portfolio -->
    <div class="row">
-       <div class="col-lg-4">
-
-       </div>
+       <div class="col-lg-1"> </div>
          <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
-             <img class="card-img-top pt-2" src="portfolio.JPG" alt="Photograph"  height="250px">
+             <img class="card-img-top pt-2" src="Emoty.png" alt="Photograph"  height="250px">
              <div class="card-body">
-               <h5 class="card-title font-weight-bold text-center">Portfolio</h5>
-               <p class="card-text">My personal Portfolio website to showcase Who am I and What I does.</p>
-               <p><span style="font-weight: 600;">Tech Stack </span>: HTML, CSS, Bootstrap.</p>
+               <h5 class="card-title font-weight-bold text-center">Emoty - Emotion Detector</h5>
+               <p class="card-text">A Web Application integrated with Machine Learning that detects the emotion of a person.</p>
+               <p><span style="font-weight: 600;">Tech Stack </span>: HTML, CSS, Bootstrap, Machine Learning, Flask. </p>
                <div class="card-footer text-center border-0 bg-white">
-               <a href="https://sakethvangala.netlify.app/" class="btn btn-lg btn-outline-dark px-5" target="_blank">View Live</a>
            </div>
            </div>
         </div>
-     <div class="col-lg-4">
-
+        <div class="col-lg-2"> </div>
+        <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
+          <img class="card-img-top pt-2" src="portfolio.JPG" alt="Photograph"  height="250px">
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold text-center">Portfolio</h5>
+            <p class="card-text">My personal Portfolio website to showcase Who am I and What I does.</p>
+            <p><span style="font-weight: 600;">Tech Stack </span>: HTML, CSS, Bootstrap.</p>
+            <div class="card-footer text-center border-0 bg-white">
+            <a href="https://sakethvangala.netlify.app/" class="btn btn-lg btn-outline-dark px-5" target="_blank">View Live</a>
+        </div>
+        </div>
      </div>
+     <div class="col-lg-1"> </div> 
    </div>
 </div>
 
@@ -113,35 +120,37 @@
         </div>
           <div class="card-body py-0 mb-3">
             <h5 class="card-title font-weight-bold text-center">Technology Intern - Deloitte</h5>
-            <p class="card-text">Worked on Identity and Access Management</p>
+            <p class="card-text">Worked on Identity and Access Management, Sail Point and ForgeRock Access Management and Identity Management.</p>
           </div>
         </div>
          <div class="col-lg-2"></div>
+
         <!-- NSS Volunteer -->
         <div class="card col-lg-4 mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
             <div class="card-header w-25 mx-auto border-0 p-0 my-3">
           <img class="card-img-top" src="https://2.bp.blogspot.com/-b-ci14Cl26c/Wv_cocZviaI/AAAAAAAABcM/1MH7Q9sfws4_3eyLY6j-l0QgibJqzA-mgCLcBGAs/s1600/NSS-logo.jpg" alt="Photograph">
         </div>
           <div class="card-body py-0 mb-3">
-            <h5 class="card-title font-weight-bold text-center">NSS Student Volunteer</h5>
+            <h5 class="card-title font-weight-bold text-center">NSS Student Volunteer, India</h5>
             <p class="card-text">A part of Team NSS VNRVJIET - Social Service through Personality Development.</p>
           </div>
         </div>
         <div class="col-lg-1"></div>
       </div>
       <div class="row  my-5">
-          <div class="col-lg-1"></div>
+          <div class="col-lg-4"></div>
             <div class="card col-lg-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
                 <div class="card-header w-25 mx-auto border-0 p-0 my-3">
               <img class="card-img-top " src="https://automation.vnrvjiet.ac.in/EduPrime2/Content/Img/logo.png" alt="Photograph">
             </div>
               <div class="card-body py-0 mb-3">
                 <h5 class="card-title font-weight-bold text-center">Social Media Manager-VNRVJIET</h5>
-                <p class="card-text">I handle the official Social Media platforms of the institution.</p>
+                <p class="card-text">I handled the official Social Media platforms of VNRVJIET.</p>
               </div>
             </div>
-           <div class="col-lg-2"></div>
-          <!-- Entreesphere Intern-->
+           <!-- <div class="col-lg-2"></div> -->
+
+          <!-- Entreesphere Intern
         <div class="card col-lg-4 mb-4 mx-2" style="border-radius: 10px; box-shadow:0px 2px 8px grey">
             <div class="card-header w-25 mx-auto border-0 p-0 my-3">
           <img class="card-img-top " src="https://media-exp1.licdn.com/dms/image/C560BAQFJ3v1BcetPvw/company-logo_200_200/0?e=2159024400&v=beta&t=7Gx5r4g7IH5dI4zJ0_qO3MF2qdp6PdCTdqcT8DVz1k4" alt="Photograph">
@@ -150,8 +159,8 @@
             <h5 class="card-title font-weight-bold text-center">Marketing Intern - Entreesphere</h5>
             <p class="card-text">Planning events to promote the Organisation and it's ideology.</p>
           </div>
-        </div>
-        <div class="col-lg-1"></div>
+        </div>-->
+        <div class="col-lg-4"></div> 
           
           
       </div>
