--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="col-lg-6 mb-2 flex-column d-flex justify-content-center align-items-flex-start" style="height: 400px;">
             <h5><span style="color:#0075f6;font-weight:700"> HELLO </span><h1><span style="color:#0075f6 ;"><span style="color: black;"> I'm </span><span style="color:#0075f6 ;">Saketh Vangala</span> </span></h1></h5>
-            <h5>A Web developer from Hyderabad pursuing my Bachelors from VNRVJIET in the stream of <strong>Information Technology</strong></h5>
+            <h5>A Tech Enthusiast pursuing my Masters in Computer Science from North Carolina State University, USA.</h5>
           </div>
           <div class="col-lg-6 mb-2">
             <img src="https://webdakaar.com/img/design-&-development.png" width="100%" alt="">
